# xRaySpectrum

./: .gitignore  LICENSE  README.md  _entry.py  pyproject.toml  spectrum_generator.spec
src/xrayspectrum/: attenuation_coefficient.py  gui.py  main.py  spectrum.py
